        - fixes to revert, parse vtree, unco/rmbranch
	- optimization: co doesn't use lsvtree if /main/0 exists
	- cptype: support for family types, and linking global types
	- mklbtype -inc on global type
	- lsgen: fix for vob root; -a implicit with -d;
	  print offsprings in addition to siblings
	- avoid lsvtree when possible (lsgen -all, ci, diff, des)
	- ci -revert: this doesn't need genealogy--only the physical parent
	- mkview -clone: fix to the storage paths, to clone other users' views

0.28 Sat Aug 20 20:35:34 BST 2011
        - mklbtype -arc: add the comment before locking the archive type
	- mklabel -over: faster fail if no type given
	- mklbtype -arc: unlock if necessary
	- mklbtype -arc: creates a global hidden type and copies it as needed
	- cptype: copy and link the Rm attribute type if needed
	- mklbtype -fam: fix to linking eqinc, as reviving a global archived lbtype
	- mklbtype -inc: same as -fam for previously archived lbtype
	- rmlabel: fix for remote elements (passed with a full path)
	- mklabel -over records the brtype for rollout
	- rollout/rollback: global type support disabled for now
	- lsgen -a, without -depth: parse lsvtree

0.29 Mon Dec 26 18:54:57 GMTST 2011
        - mklbtype -config
	- mklabel -config
	- fixed mklabel -up: view extended paths, and symlinks
	- archive: convenience synonymous of mk(lb|br)type -arc
	- lock/unlock: global types must be handled via their source vob
	- fixed diff: one case of no predecessor

0.30 Thu Feb  2 17:55:09 GMTST 2012
        - reverted the cmwiki links in the doc to cmcrossroads.../cgi-bin/...
	- cptype: fix for remote copy of a global type
	- mklabel -up: fix for version extended names
	- mklabel -fullcopy
	- _Ensuretypes: back to local in every case.
	- lstype fix: do not abort for sync errors unless in presence of admin vob
	- rollout: fix to comment handling (bug report by Andy Walshe)

0.31 Tue Feb  7 15:28:15 GMTST 2012
        - co: implemented the -out and -nda functionalities